@startuml Student-System

class Person {
    + name: string
    + age: number
    + introduce(): string
}

class Student {
    - courses: string[]
    + studentId: string
    + enroll(): void
    + getCourses(): string[]
}

class Teacher {
    + subject: string
    + teach(): string
}

class Course {
    - students: Student[]
    - grades: Map<Student, number>
    + name: string
    + teacher: string
    + enrollStudent(): void
    + assignGrade(): void
    + getStudentGrades(): Map<Student, number>
    + calculateAverageGrade(): number
}

Person <|-- Student
Person <|-- Teacher
Course "1" o-- "*" Student: enrolled in
Course "1" --> "1" Teacher : taught by

@enduml